--- a/src/test/objectstore/CMakeLists.txt
+++ b/src/test/objectstore/CMakeLists.txt
@@ -103,7 +103,6 @@ if(WITH_BLUESTORE)
   add_ceph_unittest(unittest_alloc)
   target_link_libraries(unittest_alloc os global)
 
-
   add_executable(unittest_alloc_bench
     Allocator_bench.cc
     $<TARGET_OBJECTS:unit-main>
@@ -120,6 +119,13 @@ if(WITH_BLUESTORE)
 
   set_target_properties(unittest_fastbmap_allocator PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
+
+  add_executable(unittest_alloc_ageing
+    Allocator_ageing_fragmentation.cc
+    $<TARGET_OBJECTS:unit-main>
+    )
+  add_ceph_unittest(unittest_alloc_ageing)
+  target_link_libraries(unittest_alloc_ageing os global)
 
   # unittest_bluefs
   add_executable(unittest_bluefs
